--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,16 +22,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:text="保存"/>
 
     <Button
         android:id="@+id/btn_query"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/btn_save"
-        android:layout_alignEnd="@+id/tv"
-        android:layout_alignRight="@+id/tv"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:text="查看"/>
 
     <EditText
@@ -42,4 +40,24 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tv"/>
 
+    <com.ouyben.androidutils.recyclerview.AutoSwipeRefreshLayout
+        android:id="@+id/refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/btn_query"
+        android:layout_below="@+id/et">
+
+        <TextView
+            android:id="@+id/tv_refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </com.ouyben.androidutils.recyclerview.AutoSwipeRefreshLayout>
+
+    <Button
+        android:id="@+id/btn_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/refresh"
+        android:layout_centerHorizontal="true"
+        android:text="刷新"/>
 </RelativeLayout>
